# xv6_public_rust

./: Cargo.toml  LICENSE-MIT  cspell.jsonc  readme.md  rust-toolcahain.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml
app/os/boot/: Cargo.toml  build.rs
app/os/boot/src/: main.rs
app/os/boot/src/arch/: mod.rs
app/os/boot/src/arch/x86/: boot.asm  boot.asm_description.md  boot.rs  consts.rs  mod.rs
app/os/kernel/: Cargo.toml  build.rs
app/os/kernel/src/: entry.rs  main.rs  params.rs
app/os/kernel/targets/: i686-xv6-none.json  i686-xv6-none.ld
app/user/: Cargo.toml
crates/elf/: Cargo.toml
crates/elf/src/: lib.rs
crates/elf/src/arch/: x86.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/page/: Cargo.toml
crates/page/src/: lib.rs
crates/syscall/: Cargo.toml
crates/syscall/src/: lib.rs
crates/trap/: Cargo.toml
crates/trap/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
