[package]
name = "boot"
version = "0.1.0"
description = "bootloader. (This boot bin file merge to kernel crate)"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true


[dependencies]
elf = { path = "../../../crates/elf" }


[lints]
workspace = true
